Added authors to frontpage of report, and updated gitignore to not include aux file in Covers

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -3,9 +3,11 @@
 
 % Authors & Supervisor
 %TODO: Add your names here:
-\firstauthor{Student name}
+\firstauthor{Andreas Carelius Brustad}
 
-\secondauthor{Student name}
+\secondauthor{Håkon Bekken}
+
+\thirdauthor{Johannes Husevåg Standal}
 
 % Report Title & Subtitle
 \title{Report: Simulation of an oil spill}
