Started on main report structure

--- a/Report/Bibliography/Bibliography.bib
+++ b/Report/Bibliography/Bibliography.bib
@@ -13,3 +13,20 @@
   year={2017}
 }
 
+@online{deepwater-horizon-oil-spill,
+  author       = {Petty Officer First Class John Masson},
+  title        = {Deepwater Horizon/BP oil spill - ATLANTIC},
+  year         = {2010},
+  url          = {https://picryl.com/media/deepwater-horizonbp-oil-spill-494e6d},
+  urldate      = {2026-01-15},
+  note         = {Accessed: 2026-01-15}
+}
+
+@online{Bay-city,
+  author       = {Jonas Kusch},
+  title        = {Bay City},
+  year         = {2026},
+  url          = {CanvasLink},
+  urldate      = {2026-01-15},
+  note         = {Accessed: 2026-01-15}
+}
