Made initial structure in report and added more referance

--- a/Report/Bibliography/Bibliography.bib
+++ b/Report/Bibliography/Bibliography.bib
@@ -13,6 +13,17 @@
   year={2017}
 }
 
+%Github referance
+@software{Github,
+  author = {Håkon Bekken, Andreas Carelius Brustad, Johannes Husevåg Standal},
+  title = {{INF202--group-18}},
+  url = {https://github.com/Suilerac/INF202---Group-18},
+  version = {v1.0},
+  year = {2026}
+}
+
+
+%Pictures taken from web
 @online{deepwater-horizon-oil-spill,
   author       = {Petty Officer First Class John Masson},
   title        = {Deepwater Horizon/BP oil spill - ATLANTIC},
