--- a/Report/main.tex
+++ b/Report/main.tex
@@ -39,14 +39,16 @@
 % Chapters
 \chapter{Introduction}\label{ch:introduction}
 Computer simulations are widely used in science and engineering to model complex systems and phenomena. 
-They allow researchers to analyze and predict the behavior of systems under various conditions, providing insights that may be difficult or impossible to obtain through traditional experimental methods. 
+They allow researchers to analyze and predict the behavior of systems under various conditions,
+providing insights that may be difficult or impossible to obtain through traditional experimental methods.
 The problem given an of oil spills has a real world implementation and are of significant for environmental concern. There are multiple examples like the Deepwater Horizon oil spill in 2010, where computational simulations was crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
+\\
 \begin{figure}[H]
 \centering
 \begin{minipage}{.5\textwidth}
   \centering
   \includegraphics[width=1.14\linewidth]{Figures/deepwater-horizonbp-oil-spill.jpg}
-  \captionof{figure}{Deepwater Horizon BP oil spill\parencite{deepwater-horizon-oil-spill}}\label{fig:Deepwater Horizon BP oil spill}
+  \captionof{figure}{Deepwater Horizon oil spill\parencite{deepwater-horizon-oil-spill}}\label{fig:Deepwater Horizon BP oil spill}
 \end{minipage}%
 \begin{minipage}{.5\textwidth}
   \centering
@@ -55,8 +57,10 @@ The problem given an of oil spills has a real world implementation and are of si
 \end{minipage}
 \end{figure}
 
-Our simulation aims to model oil trajectory and spread forecasting in Bay city. Outside Bay city is a fishing ground that are voulnerable to oil spills.
-\\This report will discuss the mathematical models used to represent the oil spill dynamics, the numerical methods to solve these models, and the implementation of the simulation.
+Our simulation aims to model oil trajectory and spread forecasting in Bay city.
+Outside Bay city is a fishing ground that are voulnerable to oil spills.
+This report will discuss the mathematical models used to represent the oil spill dynamics,
+the numerical methods to solve these models, and the implementation of the simulation.
 \newpage
 
 \chapter{Overall problem}
@@ -67,9 +71,19 @@ Our simulation aims to model oil trajectory and spread forecasting in Bay city. 
 
 
 \chapter{Code structre}
+\section{Folder structre}
+
+\section{UML-diagram}
 
 
 \chapter{Agile development}
+Agile development is an iterative approach to software creation that emphasizes flexibility,
+collaboration, and delivering working increments frequently.
+
+
+\section{Story map and 3rd party software}
+
+\section{github}
 
 
 \chapter{Results}
