Progress on agile dev

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -75,13 +75,41 @@ the numerical methods to solve these models, and the implementation of the simul
 
 \section{UML-diagram}
 
-
 \chapter{Agile development}
-Agile development is an iterative approach to software creation that emphasizes flexibility,
-collaboration, and delivering working increments frequently.
-
+Agile development is an iterative approach to software creation that emphasizes flexibility and
+collaboration. The main idea is breaking a complex problem into smaller parts.  
+Through small, frequent releases of working software, 
+the strategy will produce results that are getting closer and closer to achieve the end goal.
 
 \section{Story map and 3rd party software}
+Our approach implementing agile development was firstly to clarify expectations to eachother working in a group.
+Secondly, we spent the first days reading and understanding the problem thoroughly. 
+By breaking the problem down to smaller pieces, we got a clear idea about what solutions
+the problem would require. By identifying this, we structured the work by creating a story map.
+\subsection{StoriesOnBoard}
+We used a 3rd party software from https://StoriesOnBoard.com with a 14 days free trail in order facilitate this. 
+We chose StoriesOnBoard because it offerd a lot more than native github projects, it had a nice layout, user firendly gui, and the ability to integrate with GitHub. 
+Focusing on documentation, organizing the main structre, we achieved a foundtation to start tackeling the problem. 
+Applying timelines and sprints, we also gained an idea to when certian taskes was supposed to be done.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{Figures/StoryBoard.png}
+    \caption{StoryBoard}
+    \label{fig:Story map}
+\end{figure}
+
+Our story map follows a traditional setup with Epics at the top, user stories on the second level  and the taskes bellow.
+The tasks were assigned under a Sprint that was set with duration of 5 days. 
+The tasks emphasizes detailed decription, rather then a big quantity of tasks in order to have a clear overview in the Story map.  
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.7\textwidth]{Figures/ExampleTask.png}
+    \caption{Example of a task}
+    \label{fig:Example task}
+\end{figure}
+
 
 \section{github}
 
