--- a/Report/Bibliography/Bibliography.bib
+++ b/Report/Bibliography/Bibliography.bib
@@ -24,7 +24,7 @@
 
 
 %Pictures taken from web
-@online{deepwater-horizon-oil-spill,
+@online{DeepwaterHorizonOilSpill,
   author       = {Petty Officer First Class John Masson},
   title        = {Deepwater Horizon/BP oil spill - ATLANTIC},
   year         = {2010},
@@ -33,7 +33,7 @@
   note         = {Accessed: 2026-01-15}
 }
 
-@online{Bay-city,
+@online{Baycity,
   author       = {Jonas Kusch},
   title        = {Bay City},
   year         = {2026},
