--- a/Report/main.tex
+++ b/Report/main.tex
@@ -1,6 +1,6 @@
 % Packages & Document Configurations
 \documentclass{report_template}
-
+\usepackage{dirtree}
 % Authors & Supervisor
 \firstauthor{Andreas Carelius Brustad}
 
@@ -41,19 +41,21 @@
 Computer simulations are widely used in science and engineering to model complex systems and phenomena. 
 They allow researchers to analyze and predict the behavior of systems under various conditions,
 providing insights that may be difficult or impossible to obtain through traditional experimental methods.
-The problem given an of oil spills has a real world implementation and are of significant for environmental concern. There are multiple examples like the Deepwater Horizon oil spill in 2010, where computational simulations was crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
+The problem given of an oil spill has a real world implementation and are of significant for environmental concern. There are multiple examples like the Deepwater Horizon oil spill in 2010, where computational simulations was crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
 \\
 \begin{figure}[H]
 \centering
 \begin{minipage}{.5\textwidth}
   \centering
-  \includegraphics[width=1.14\linewidth]{Figures/deepwater-horizonbp-oil-spill.jpg}
-  \captionof{figure}{Deepwater Horizon oil spill\parencite{deepwater-horizon-oil-spill}}\label{fig:Deepwater Horizon BP oil spill}
+  \includegraphics[width=1\linewidth]{Figures/deepwater-horizonbp-oil-spill.jpg}
+  \captionof{figure}{Deepwater Horizon oil spill
+  \parencite{DeepwaterHorizonOilSpill}}\label{fig:Deepwater Horizon BP oil spill}
 \end{minipage}%
-\begin{minipage}{.5\textwidth}
+\begin{minipage}{.55\textwidth}
   \centering
   \includegraphics[width=.8\linewidth]{Figures/BayCity.png}
-  \captionof{figure}{Bay city\parencite{Bay-city}}\label{fig:Bay city from task}
+  \captionof{figure}{Bay city
+  \parencite{Baycity}}\label{fig:Bay city from task}
 \end{minipage}
 \end{figure}
 
@@ -71,7 +73,28 @@ the numerical methods to solve these models, and the implementation of the simul
 
 
 \chapter{Code structre}
+
 \section{Folder structre}
+
+
+\dirtree{%
+.1 src.
+.2 geometry.
+.3 geometry.py.
+.3 mesh.py.
+.3 cell.py.
+.3 line.py.
+.3 triangle.py.
+.2 simulation.
+.3 plotter.py.
+.3 simulation.py.
+.3 solver.py.
+.2 InputOutput.py.  
+.3 commandlineParser.py.
+.3 log.py.
+.3 tomlParser.py.
+}
+
 
 \section{UML-diagram}
 
@@ -87,31 +110,65 @@ Secondly, we spent the first days reading and understanding the problem thorough
 By breaking the problem down to smaller pieces, we got a clear idea about what solutions
 the problem would require. By identifying this, we structured the work by creating a story map.
 \subsection{StoriesOnBoard}
-We used a 3rd party software from https://StoriesOnBoard.com with a 14 days free trail in order facilitate this. 
-We chose StoriesOnBoard because it offerd a lot more than native github projects, it had a nice layout, user firendly gui, and the ability to integrate with GitHub. 
+We used a 3rd party software from https://StoriesOnBoard.com with a 14 days free trail in order to facilitate agile development. 
+We chose StoriesOnBoard because it offerd more features than native github projects, it had a nice layout, user firendly gui, and the ability to integrate with GitHub. 
 Focusing on documentation, organizing the main structre, we achieved a foundtation to start tackeling the problem. 
 Applying timelines and sprints, we also gained an idea to when certian taskes was supposed to be done.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{Figures/StoryBoard.png}
-    \caption{StoryBoard}
-    \label{fig:Story map}
+    \caption{Story map}
 \end{figure}
 
-Our story map follows a traditional setup with Epics at the top, user stories on the second level  and the taskes bellow.
-The tasks were assigned under a Sprint that was set with duration of 5 days. 
-The tasks emphasizes detailed decription, rather then a big quantity of tasks in order to have a clear overview in the Story map.  
+Our story map follows a traditional setup with Epics at the top, user stories on the second level  and taskes bellow their respective user story.
+The tasks were assigned under a Sprint that was set with a duration of 5 days. 
+The tasks emphasizes detailed decription and checkmarks within the task, rather then a big quantity of tasks in order to have a clear overview in the Story map.
+If a task where missing certain elements, rather then creating new issues or sub issues,
+it gave a better overview to edit description and add checkmarks.
 
+\newpage
 \begin{figure}[H]
-    \centering
-    \includegraphics[width=.7\textwidth]{Figures/ExampleTask.png}
-    \caption{Example of a task}
-    \label{fig:Example task}
+\centering
+\begin{minipage}{.45\textwidth}
+  \centering
+  \includegraphics[width=\linewidth]{Figures/ExampleTask.png}
+\end{minipage}\hfill%
+\begin{minipage}{.45\textwidth}
+  \centering
+  \includegraphics[width=\linewidth]{Figures/ExampleTask2.png}
+\end{minipage}
+
+\vspace{0.5em}
+
+\begin{minipage}{.65\textwidth}
+  \centering
+  \includegraphics[width=\linewidth]{Figures/ExampleTask3.png}
+\end{minipage}
+\caption{Example of tasks}
 \end{figure}
+
+Looking at some examples of tasks created on StoriesOnBoard, to demonstrate several features with agile development. 
+It has instantanious replication to github issues. The possiblity to stage multiple issues and bulk push them was useful. 
+This enables us to keep an overview and it assured creation of good descriptions and to think through what the issue would required for completion.
+A task could have multiple attriubutes for weiging through priority, difficulty and effect. 
+By having this 3rd party software, we where able to systematicly and visualy structre the project through agile development principles.
 
 
 \section{github}
+
+Implementing continuous integration (CI) with GitHub Actions and tox streamlined the project testing across multiple environments.
+The benefits with continuous integration is all about catching regressions early through automated linting, unit tests, and cross-version compatibility checks. 
+This setup ensures reliability before merging pull requests. 
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{Figures/CI.png}
+    \caption{Implementation of contionous integration in github actions}
+\end{figure}
+
+As demonstrated, having implemented continous integration early on, 
+gave significant help throughout the project, assuring working code before merging.
 
 
 \chapter{Results}
