--- a/Report/main.tex
+++ b/Report/main.tex
@@ -79,17 +79,17 @@ the numerical methods to solve these models, and the implementation of the simul
 
 \dirtree{%
 .1 src.
-.2 geometry.
+.2 Geometry.
 .3 geometry.py.
 .3 mesh.py.
 .3 cell.py.
 .3 line.py.
 .3 triangle.py.
-.2 simulation.
+.2 Simulation.
 .3 plotter.py.
 .3 simulation.py.
 .3 solver.py.
-.2 InputOutput.py.  
+.2 InputOutput.  
 .3 commandlineParser.py.
 .3 log.py.
 .3 tomlParser.py.
