Progressing on examples

--- a/Examples/Geometry.ipynb
+++ b/Examples/Geometry.ipynb
@@ -9,6 +9,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5977390",
+   "metadata": {},
+   "source": [
+    "Hello, and welcome to our notebook that demonstrate our Geometry package, with all its classes and functions.\n",
+    "The geometry package contains the follwing classes\n",
+    "\n",
+    "+ mesh.py  \n",
+    "A class to keep track of relevant data in a computational mesh.  \n",
+    "It uses meshio to read the mesh, and then stores the relevant data.\n",
+    "\n",
+    "+ cellfactory.py  \n",
+    "A function for creating a list of new Cell objects based on meshio data\n",
+    "\n",
+    "+ cells.py  \n",
+    "An abstract class for handling relevant data of cells in the oil simulation\n",
+    "\n",
+    "+ line.py  \n",
+    "A class for handeling Line cells\n",
+    "\n",
+    "+ triangle.py  \n",
+    "A class for handeling Triangle cells\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3af9c9ec",
+   "metadata": {},
+   "source": [
+    "We start of by demonstrating the mesh class. The mesh class takes the mesh file in as a string.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a4fe187e",
@@ -18,12 +52,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "from Geometry.mesh import Mesh"
+    "from Geometry.mesh import Mesh\n",
+    "import os\n",
+    "root = \"/\".join(os.getcwd().split(\"\\\\\")[:-1])\n",
+    "meshPath = root + \"/meshes/bay.msh\"\n",
+    "\n",
+    "mesh= Mesh(meshPath)\n",
+    "#A mesh file has been added"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed662700",
+   "metadata": {},
+   "source": [
+    "The Mesh class has one functions.  \n",
+    "  \n",
+    "+ addAllNeighbour  \n",
+    " Goes through all cells and adds all neighbours for each cell  \n",
+    "\n",
+    "Lets demonstrate!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a3941548",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Finding neighbours: 100%|██████████| 3712/3712 [00:00<00:00, 449160.67it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mesh.addAllNeighbours()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58bf6e83",
+   "metadata": {},
+   "source": [
+    "# Examples for Cells class\n",
+    "\n",
+    "The cells class is where all the magic happens.  \n",
+    "The class has the following functions:  \n",
+    "+ __str__  \n",
+    "Returns a string in the form [[X Y Z], [X Y Z], ... , [X Y Z]]\n",
+    "        This is to represent the points that make up the cell  \n",
+    "+ updateOilValue  \n",
+    "+ addNeighbour  \n",
+    "+ updateFlowToNeighbour\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ff0df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Geometry.cells import Cell\n",
+    "\n",
+    "print(mesh.cells[0].neighbours)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "934ff8a7",
+   "metadata": {},
+   "source": [
+    "# Examples for cellfactory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4975aac8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed48aff0",
+   "metadata": {},
+   "source": [
+    "# Examples for line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6845bba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4c816ea",
+   "metadata": {},
+   "source": [
+    "# Examples for triangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19255c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
    ]
   }
  ],
